# GitFastApi

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
gitfastapi/: main.py
gitfastapi/api/: endpoints.py
gitfastapi/infrastructure/: github_client.py
gitfastapi/services/: repository_service.py
gitfastapi/static/: repos.csv
static/: repositories_'python'_5_0.csv
