[tool.poetry]
name = "gitfastapi"
version = "0.1.0"
description = ""
authors = ["daxter <aleksej.biriulin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.2"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
httpx = "^0.27.0"
aiofile = "^3.8.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"
types-aiofiles = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
